Fixing the spacing on the DRAFT badging.

--- a/src/assets/scss/core/_custom.scss
+++ b/src/assets/scss/core/_custom.scss
@@ -71,7 +71,7 @@ h6 {
     color: $warning-900;
     content: "Draft: ";
     font-family: $font-family-bold;
-    //margin-right: 0.8rem;
+    margin-right: 0.5rem;
     text-transform: uppercase;
   }
 }
